package alarms;
option java_package = "org.yamcs.protobuf";

import "yamcs.proto";
import "pvalue.proto";

message AlarmsSubscribeRequest {
   optional bool getCurrent = 1; // Whether to return the active set of alarms after a subscribe request is made (defaults to true)
}

message Alarm {
   optional pvalue.ParameterValue triggerValue = 1;
   optional pvalue.ParameterValue mostSevereValue = 2;
   optional pvalue.ParameterValue currentValue = 3;
   optional uint32 violations = 4;
}

message AlarmNotice {
   enum Type {
      TRIGGERED = 1;
      SEVERITY_INCREASED = 2;
      UPDATED = 3;
      CLEARED = 4;
   }

   optional Type type = 1;
   optional int64 triggerTime = 2;
   optional string triggerTimeUTC = 3;
   optional pvalue.ParameterValue pval = 4;
   optional string username = 5;  // In case the alarm was cleared
}
